<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_screen"    
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescient_name"        
        android:textSize="45sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_recognition_system"        
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_admin"        
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center" />
         
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" 
        android:layout_gravity="right"
        android:layout_marginTop="450px" />
    
</LinearLayout>
