<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_screen"    
    >
    <TextView
        android:id="@+id/prescient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescient_name"        
        android:textSize="45sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/application_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_recognition_system"        
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/user_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_manager"        
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <Button
        android:id="@+id/findGuest"
        android:layout_width="150px"
        android:layout_height="wrap_content"
        android:text="Find Guest"
        android:layout_gravity="center"
        android:layout_marginTop="400px"/>


    <Button
            android:id="@+id/guest_list"
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:text="Display Guest"
            android:layout_gravity="center"/>

</LinearLayout>
